--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,17 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - AlgorithmExamplesApplication",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopOnEntry": false,
+            "mainClass": "com.hongghe.algorithmexamples.AlgorithmExamplesApplication",
+            "args": "",
+            "projectName": "algorithm-examples"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - TestThread",
             "request": "launch",
             "cwd": "${workspaceFolder}",
